# SmartClick

./: .project  AndroidManifest.xml  README.md  build.gradle  settings.gradle
Clickable/: build.gradle
Clickable/src/main/: AndroidManifest.xml
Draggable/: build.gradle
Draggable/src/main/: AndroidManifest.xml
FloatingView/: build.gradle
FloatingView/src/main/: AndroidManifest.xml
LayoutUtils/: build.gradle
LayoutUtils/src/main/: AndroidManifest.xml
LibParcelableBundle/: build.gradle
LibParcelableBundle/src/main/: AndroidManifest.xml
ReflectionUtils/: build.gradle
ReflectionUtils/src/main/: AndroidManifest.xml
TODO/: build.gradle
TODO/src/main/: AndroidManifest.xml
Taggable/: build.gradle
TaskBuilder/: build.gradle
TextBook/: build.gradle
TextBook/src/main/jni/: CMakeLists.txt  JniHelpers.cpp  JniHelpers.h  Skia.cpp  SkiaInstance.cpp  SkiaInstance.h  TextBookGL.cpp  buildSkia.sh  log.cpp  log.h
app/: build.gradle
app/src/main/: AndroidManifest.xml
floatingView/src/: FloatingView.java
gradle/wrapper/: gradle-wrapper.properties
res/drawable/: outline.xml
res/layout/: action_bar.xml  activity_main.xml  bouncing_ball.xml  layout_floating_image_analysis_widget.xml  layout_floating_image_analysis_widget_expanded.xml  layout_floating_widget.xml  layout_floating_widget_collapsed.xml  layout_floating_widget_expanded.xml  recyclerview_item.xml
res/layout-land/: layout_floating_image_analysis_widget.xml  layout_floating_image_analysis_widget_expanded.xml
res/values/: strings.xml
res/xml/: global_action_bar_service.xml  scene_01.xml
(+184 files in other folders)
